# Foundry-Agent

./: .env.example  .gitignore  README.md  agents.yaml  api.py  design.md  foundry_tools.py  list_agents.py  local_agent.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  server.py  test_af.py  todo.md
agent/: __init__.py  foundry_tools.py  local_agent.py  orchestrator.py  pipeline.py
api/: __init__.py  app.py
tests/: test_api.py  test_foundry_tools.py  test_local_agent.py  test_orchestrator.py  test_parallel_delegation.py  test_pipeline.py  test_run.py  test_ws.py
