[project]
name = "foundry-agent"
version = "0.1.0"
description = "Multi-agent CLI orchestrator using Microsoft Agent Framework and Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-azure-ai==1.0.0b260107",
    "agent-framework-core==1.0.0b260107",
    "azure-ai-agentserver-core==1.0.0b10",
    "azure-ai-agentserver-agentframework==1.0.0b10",
    "azure-ai-projects==2.0.0b3",
    "azure-identity>=1.20.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "opentelemetry-semantic-conventions-ai==0.4.13",
]

[project.scripts]
foundry-agent = "main:main"

[tool.uv]
prerelease = "allow"
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that require live LLM credentials (deselect with -m 'not integration')",
]
